--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "author": "Guille Paz <guille87paz@gmail.com>",
   "version": "1.0.1",
   "scripts": {
-    "build": "node browserify.js",
+    "build": "browserify -s Slideout -e index.js -o dist/slideout.js",
     "test": "npm run build && istanbul cover _mocha",
-    "dist": "node browserify.js && uglifyjs ./dist/slideout.js -m -o ./dist/slideout.min.js",
+    "dist": "npm run build && uglifyjs ./dist/slideout.js -m -o ./dist/slideout.min.js",
     "hint": "jshint index.js"
   },
   "dependencies": {
@@ -16,13 +16,13 @@
   },
   "devDependencies": {
     "better-assert": "1.0.2",
-    "browserify": "13.1.1",
+    "browserify": "^16.2.2",
     "coveralls": "2.11.15",
-    "istanbul": "0.4.5",
+    "istanbul": "^0.4.5",
     "jsdom": "9.8.3",
     "jshint": "2.9.4",
-    "mocha": "3.1.2",
-    "uglify-js": "2.7.4"
+    "mocha": "^5.2.0",
+    "uglify-js": "^3.4.5"
   },
   "main": "index.js",
   "keywords": [
